# chessresults

./: LICENCE  README  setup.cfg  setup.py
chessresults/: __init__.py  identify.py  prepare_ecf_format.py  prepare_league_format.py  results_database.py  results_ecf.py  results_lite.py  results_ogd.py
chessresults/apsw/: __init__.py  resultsdatabase.py  upgrade_from_0_33_7_to_0_34.py
chessresults/basecore/: database.py  ecfdataimport.py  ecfogddataimport.py  knownnames.py  knownnamesds.py  newidentitydss.py  playerfind.py  upgrade_from_0_33_7_to_0_34.py
chessresults/berkeleydb/: __init__.py  resultsdatabase.py
chessresults/core/: collation.py  collationdb.py  configuration.py  constants.py  convertresults.py  ecfclubdb.py  ecfdataimport.py  ecfgcodemaprecord.py  ecfmaprecord.py  ecfogddataimport.py  ecfogddb.py  ecfogdrecord.py  ecfplayerdb.py  ecfrecord.py  emailextractor.py  eventdata.py  eventparser.py  feedback_html.py  filespec.py  gameobjects.py  gameresults.py  importcollation.py  importcollationdb.py  importreports.py  importresults.py  matchteams.py  mergeplayers.py  names.py  oldrecords_0_10.py  oldrecords_0_23.py  oldrecords_0_24.py  oldrecords_0_4.py  players_html.py  prepareresults.py  report.py  resultsrecord.py  schedule.py  season.py  takeoncollation.py  takeoncollationdb.py  (+4 more)
chessresults/core/ecf/: __init__.py  ecfclubdb.py  ecfdataimport.py  ecfmaprecord.py  ecfplayerdb.py  ecfrecord.py
chessresults/core/ogd/: __init__.py  ecfgcodemaprecord.py  ecfogddataimport.py  ecfogddb.py  ecfogdrecord.py
chessresults/db/: __init__.py  resultsdatabase.py
chessresults/dpt/: __init__.py  ecfdataimport.py  ecfogddataimport.py  knownnamesds.py  newidentitydss.py  resultsdatabase.py
chessresults/gui/: activeclubs.py  aliaslinkgrids.py  aliaslinkrow.py  configure.py  configuredialog.py  configuredialog_hack.py  control.py  control_database.py  control_lite.py  control_ogd.py  datarow.py  ecfclubcodes.py  ecfdaterow.py  ecfdetail.py  ecfdownload.py  ecferrors.py  ecfeventgrids.py  ecfevents.py  ecfgcodemaprow.py  ecfgradingcodes.py  ecfmaprow.py  ecfogdrow.py  ecfplayergrids.py  ecfplayers.py  ecfrow.py  eventgrids.py  eventplayergrids.py  events.py  events_database.py  events_lite.py  events_ogd.py  feedback.py  feedback_monthly.py  gamesummary.py  help.py  help_.py  identities.py  importecfdata.py  importecfogd.py  importevents.py  (+27 more)
chessresults/gui/ecf/: __init__.py  activeclubs.py  control.py  ecfclubcodes.py  ecfdaterow.py  ecfdetail.py  ecfdownload.py  ecferrors.py  (+17 more)
chessresults/help/: __init__.py  aboutresults.txt  guide.txt  keyboard.txt  results.txt  sample_anytown12.txt  sample_emails.txt  sample_league_2.txt  sample_league_ports_match.txt  sample_league_soton.txt  sample_tabular_league.txt  sample_tabular_league_fixtures.csv  sample_tabular_league_results.csv  samples.txt  tablespecs.txt
chessresults/help_/: __init__.py  filesize.txt  guide.txt  sample_anytown13.txt  sample_league_1.txt  sample_league_3.txt  sample_league_4.txt  sample_league_5.txt  sample_league_ports.txt  sample_league_ports_fix.txt  sample_tabular_emails.txt  samples.txt
chessresults/minorbases/: __init__.py  bz2textapi.py  csvapi.py  dbaseapi.py  textapi.py  ziptextapi.py
chessresults/samples/: resultsdb.py  resultsdb_lite.py  resultsdb_ogd.py
chessresults/sqlite/: __init__.py  resultsdatabase.py  upgrade_from_0_33_7_to_0_34.py
chessresults/tools/: create_chessresults_database.py  results_sqlite_table_name_upgrade.py  upgrade_3_to_4.py  upgrade_results_from_2-1_to_2-2.py
chessresults/unqlite/: __init__.py  resultsdatabase.py
chessresults/vedis/: __init__.py  resultsdatabase.py
db-5.1.29/build_unix/: Makefile  config.status  db_archive  db_checkpoint  db_deadlock  db_dump  db_hotbackup  db_load  db_log_verify  db_printlog  db_recover  db_replicate  db_stat  db_upgrade  db_verify  libdb-5.1.la  libtool
(+32 files in other folders)
