[metadata]
name = chessresults
version = 5.2
description = Results database for chess games
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chessresults
    chessresults.core
    chessresults.help
    chessresults.basecore
    chessresults.minorbases
    chessresults.gui
    chessresults.gui.minorbases
    chessresults.berkeleydb
    chessresults.db
    chessresults.dpt
    chessresults.sqlite
    chessresults.apsw
    chessresults.unqlite
    chessresults.vedis
    chessresults.tools
install_requires =
    solentware-base==4.1.8
    chesscalc==1.3.1
    emailstore==1.5.1
    emailextract==0.7.7
    solentware-grid==2.1.6
    solentware-misc==1.4.1

[options.package_data]
chessresults.help = *.txt
