[metadata]
name = chessresults
version = 5.3.dev0
description = Results database for chess games
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chessresults
    chessresults.core
    chessresults.help
    chessresults.basecore
    chessresults.minorbases
    chessresults.gui
    chessresults.gui.minorbases
    chessresults.berkeleydb
    chessresults.db
    chessresults.dpt
    chessresults.sqlite
    chessresults.apsw
    chessresults.unqlite
    chessresults.vedis
    chessresults.tools
install_requires =
    chessvalidate==1.0.dev0
    solentware-base==4.1.8
    chesscalc==1.3.1
    solentware-grid==2.1.6

[options.package_data]
chessresults.help = *.txt
